# xmtp-app

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  api-review.md  refactor-plan.md
.claude/skills/record-pitfall/: SKILL.md
.github/workflows/: mobile.yml  rust.yml
crates/xmtp-cli/: Cargo.toml
crates/xmtp-cli/src/: acp.rs  main.rs
crates/xmtp-cli/tests/: daemon_command.rs  daemon_status_error.rs  init_command.rs  status_command.rs
crates/xmtp-config/: Cargo.toml
crates/xmtp-config/src/: lib.rs
crates/xmtp-config/tests/: config_roundtrip.rs
crates/xmtp-core/: Cargo.toml
crates/xmtp-core/src/: lib.rs
crates/xmtp-daemon/: Cargo.toml
crates/xmtp-daemon/src/: lib.rs
crates/xmtp-daemon/tests/: http_transport.rs  login_updates_state.rs  signer_key.rs
crates/xmtp-ipc/: Cargo.toml
crates/xmtp-ipc/src/: lib.rs
crates/xmtp-ipc/tests/: request_roundtrip.rs  rest_types_roundtrip.rs
crates/xmtp-logging/: Cargo.toml
crates/xmtp-logging/src/: lib.rs
crates/xmtp-store/: Cargo.toml
crates/xmtp-store/src/: lib.rs
crates/xmtp-store/tests/: state_roundtrip.rs
crates/xmtp-tui/: Cargo.toml
crates/xmtp-tui/src/: app.rs  event.rs  format.rs  ipc.rs  lib.rs  main.rs  markdown.rs  ui.rs
docs/: design.md  mobile-app-backlog.md  mobile-glossary.md  react-native-enriched-markdown-vendoring.md  wallet-connect-integration-plan.md
docs/adr/: 001-bypass-sdk-content-method.md  002-native-message-content-for-send.md  003-reactions-as-message-aggregation.md  004-markdown-rendering-native-component.md  005-conversation-preview-skip-non-content.md
docs/memory/: xmtp-sdk-stream-new-conversation.md
docs/pitfalls/: acp-interrupt-cancel-race.md  acp-post-method-not-found-hang.md  axcli-lark-automation.md  flashlist-autoscroll-regression.md  react-native-debug-workflow.md  react-native-keyboard-avoidance.md  react-native-markdown-code-font-and-vendoring.md  xmtp-sdk-content-decoding.md  xmtp-sdk-stream-cancelled-by-verification.md
docs/plans/: 2026-04-12-acp-interrupt-on-new-message-plan.md  2026-04-12-cc-bridge-implementation-plan.md  2026-04-12-mobile-foldable-layout-implementation-plan.md  acp-reaction-status-plan.md  chat-detail-screen.md
docs/research/: 2026-04-12-mobile-foldable-layout-report.md  README.md  chat-action-typing-indicator.md  identity-resolution.md  xmtp-active-proposals.md  xmtp-payment-content-types.md  xmtp.md
docs/research/cc-bridge/: README.md  change-scope.md  feasibility.md  phased-plan.md
docs/solutions/ui-bugs/: android-oem-monospace-font-not-applied-2026-03-29.md  markdown-table-horizontal-scroll-gesture-conflict-2026-03-29.md
docs/superpowers/plans/: 2026-03-31-read-receipts.md  2026-04-06-actions-intent-support.md
scripts/: benchmark_send_latency.py
xmtp-mobile/: app.config.js  app.json  eslint.config.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json
xmtp-mobile/app/: _layout.tsx  index.tsx  login.tsx
xmtp-mobile/app/(main)/: _layout.tsx  about.tsx  conversations.tsx  new-conversation.tsx  settings.tsx
xmtp-mobile/app/(main)/conversation/: [id].tsx  add-member.tsx  dm-detail.tsx  group-detail.tsx
xmtp-mobile/patches/: react-native-enriched-markdown+0.4.1.patch
xmtp-mobile/src/__tests__/: decodedToMessageItem.test.ts
xmtp-mobile/src/components/: ActionButtons.tsx  ConversationListItem.tsx  ConversationListSkeleton.tsx  ConversationPane.tsx  EditableField.tsx  InfoRow.tsx  MemberActionSheet.tsx  MemberRow.tsx  MessageBubble.tsx  MessageInput.tsx  ScreenHeader.tsx
xmtp-mobile/src/content/: decode-utils.ts  index.ts  registry.ts  types.ts  unknown.ts
xmtp-mobile/src/content/handlers/: actions.ts  groupUpdated.ts  markdown.ts  reaction.ts  readReceipt.ts  reply.ts  text.ts
xmtp-mobile/src/hooks/: useAppState.ts  useConversations.ts  useMessages.ts  useNetworkState.ts  useWindowClass.ts
xmtp-mobile/src/store/: auth.ts  conversations.ts  drafts.ts  messages.ts  settings.ts
xmtp-mobile/src/utils/: address.ts  addressLookup.ts  logger.ts  markdown.ts  messageDecoder.ts  nativeContent.ts  reconnect.ts  time.ts
xmtp-mobile/src/utils/__tests__/: markdown.test.ts
xmtp-mobile/src/xmtp/: client.ts  coinbaseCodecs.ts  groups.ts  messages.ts
