[workspace]
members = [
  "crates/xmtp-cli",
  "crates/xmtp-config",
  "crates/xmtp-core",
  "crates/xmtp-daemon",
  "crates/xmtp-ipc",
  "crates/xmtp-logging",
  "crates/xmtp-store",
  "crates/xmtp-tui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
eventsource-stream = "0.2"
futures-util = "0.3"
libc = "0.2"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "stream"] }
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync", "net", "time", "io-util"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
xmtp = { version = "0.8.1", features = ["alloy"] }
