[package]
name = "xmtp-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xmtp.workspace = true
xmtp-config = { path = "../xmtp-config" }
xmtp-core = { path = "../xmtp-core" }
xmtp-ipc = { path = "../xmtp-ipc" }
xmtp-logging = { path = "../xmtp-logging" }
xmtp-store = { path = "../xmtp-store" }

[dev-dependencies]
tempfile.workspace = true
