[package]
name = "xmtp-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
libc.workspace = true
prost.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xmtp = { path = "../../../xmtp-fork/xmtp", features = ["alloy"] }
xmtp-config = { path = "../xmtp-config" }
xmtp-core = { path = "../xmtp-core" }
xmtp-ipc = { path = "../xmtp-ipc" }
xmtp-logging = { path = "../xmtp-logging" }
xmtp-store = { path = "../xmtp-store" }

[dev-dependencies]
eventsource-stream.workspace = true
futures-util.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tokio.workspace = true
