[package]
name = "xmtp-logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
xmtp-core = { path = "../xmtp-core" }

[dev-dependencies]
tempfile.workspace = true
