[package]
name = "xmtp-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
xmtp-daemon = { path = "../xmtp-daemon" }
xmtp-ipc = { path = "../xmtp-ipc" }

[[bin]]
name = "xmtp-tui"
path = "src/main.rs"
